@@ -17,6 +17,13 @@ sub new_client {
     );
 }
 
+# WWW::OAuth recommends WWW::Form::UrlEncoded::XS. If it isn't available, it
+# falls back to WWW::Form::UrlEncoded::PP with a warning. Those warnings cause
+# test failures, here. We'll force the fallback and bypass the potential
+# warning. The tests shouldn't care whether the user has the recommended XS
+# module or not.
+$ENV{WWW_FORM_URLENCODED_PP} = 1;
+
 context 'Net::Twitter migration' => sub {
     my $client;
     before each => sub {
